[package]
name = "decen-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.27"
log = "0.4.17"
log4rs = "1.2.0"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"]  }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
uuid = {version = "1.3.0", features = ["v4","fast-rng","macro-diagnostics","serde"]}
